# nyx

./: ANOMALIES.md  BENCH-DOMEM.md  BENCH-LIGHT.md  CLAUDE.md  Cargo.toml  IMPOSSIBLE.md  PANTHEON.md  PAPER.md  PAPER_DRAFT.md  PITCH.md  activate.sh  alerte  aliases.sh  apprendre  bench-gaia.sh  bench-loop.sh  bench-results.md  bench-verify.sh  console  core.py  corrige  demande  espace  flow.py  god.py  heartbeat  i3-bindings.conf  index.html  input.json  killswitch  mic.json  mind.md  music.json  music_feel.json  n  nyx_body.rs  nyxx  output.json  package-lock.json  package.json  (+21 more)
corps/: CLAUDE.md  adn.json  cerveau  coeur  doigts  memoire  oreilles  peau  poumons  voix  yeux
dreams/: CLAUDE.md
flow/: .env.example  .gitignore  CLAUDE.md  go.mod
flow-chat/: .bashrc  .env.example  .gitconfig  .gitignore  ARCHITECTURE.md  CIPHER_README.md  FLOW.md  LICENSE.md  cli.py  deploy.sh  flow-auto  flow-debug  flow-proprio  flow-sanguin.py  flow-sense  flow-state  ingest_phil.py  quick_hunt.py  rebuild.sh  requirements_cipher.txt  run.py  temp_cytoplasme.md
flow-chat/adn/: ARCHITECTURE.md  COMMANDS.md  INTERCOM.md  RESULTS.md  budget.json  daemon_state.json  daemon_test.md  debug_test.txt  dreams.md  incarnation_plan.md  integrite.json  kb.pl  kb.py  organs.sig  (+6 more)
flow-chat/alea/: Cargo.toml  alea
flow-chat/alea/src/: main.rs
flow-chat/quantique/: Cargo.toml
flow-chat/quantique/src/: lib.rs  main.rs
gitmout/: README.md
go/: go.mod
public/: index.html  zoe.html
pwnd/: .env.example  CLAUDE.md  PROJECT.md  README.md
src/: main.rs  server.js
thirst/: CLAUDE.md
(+1519 files in other folders)
