[package]
name = "alea"
version = "0.1.0"
edition = "2021"
description = "Blockchain entropy for personality anti-ossification"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
rand = "0.8"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
