[package]
name = "quantique"
version = "0.1.0"
edition = "2021"

[dependencies]
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
sha3 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
lazy_static = "1.4"

[lib]
name = "quantique"
path = "src/lib.rs"

[[bin]]
name = "quantique"
path = "src/main.rs"
